Dark Mode Fixes: Pager and Flyout

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1564,8 +1564,7 @@ input.searchquery{
 	gap: 15px;
     margin-top: 17px;
 	margin-left: -251px;
-	background:url(../images/bg_small.png);
-	background-color: rgba(255, 255, 255, 0.5);
+	background-color: var(--flyout-bg-color);
 	z-index: 10;
 	border-radius: 4px;
 	font-size: 12px;
