--- a/public/css/themes/dark.css
+++ b/public/css/themes/dark.css
@@ -29,4 +29,5 @@
     --boh_hover_bg: #343A40;
     --sticky-color: #19524d;
     --link-color: #56D0D0;
+    --flyout-bg-color: rgb(48, 48, 48);
 }
