--- a/public/css/themes/light.css
+++ b/public/css/themes/light.css
@@ -28,4 +28,5 @@
     --boh_hover_bg: #ffffff;
     --sticky-color: #90b8b9;
     --link-color: #50a3a3;
+    --flyout-bg-color: rgba(255, 255, 255, 0.5);
 }
